# Secure-Password-Manager-

./: Cargo.toml  README.md
src/: main.rs
src/credential_manager/: mod.rs  vault.rs
src/encryption/: crypto.rs  mod.rs
src/password_gen/: mod.rs
src/ui/: cli.rs
src/utils/: constants.rs  errors.rs  mod.rs
